--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #11c76f;
+    background-color: red;
   }
   h1{
       text-align: center; text-decoration: underline;
